# portus

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test.db
.github/workflows/: publish.yml
adapters/: __init__.py
adapters/output/: __init__.py  notifications.py
adapters/output/in_memory/: __init__.py  base.py  (+1 more)
common/: __init__.py  internal_data.py  types.py
common/exceptions/: __init__.py  validation.py
core/: __init__.py
core/services/: __init__.py  crud.py  default.py
core/types/: __init__.py  default.py  internal_data.py
hooks/: __init__.py
hooks/base/: __init__.py  hook.py  life_cycle.py  orchestrator.py
hooks/core/: __init__.py
hooks/features/: __init__.py
hooks/functions/: __init__.py  id_generation.py  security.py  send_email.py  timestamp.py
hooks/logger/: __init__.py  core.py  predefined.py
hooks/relation/: __init__.py  setter.py  validator.py
hooks/transformer/: __init__.py  core.py  predefined.py
hooks/triggerer/: __init__.py  core.py  predefined.py
hooks/triggers/: __init__.py  emit_event.py
hooks/validator/: __init__.py  core.py  predefined.py
mappers/: __init__.py  base.py  default.py
ports/: __init__.py
ports/input/: __init__.py  crud.py
ports/output/: __init__.py
src/adapters/: __init__.py
src/common/: __init__.py  internal_data.py  logger.py  types.py
src/core/: __init__.py
src/hooks/: __init__.py
src/mappers/: __init__.py  base.py  db_base.py  db_default.py  default.py
src/ports/: __init__.py
tests/: conf_test.py
tests/integration/: test_user_flow.py
utils/functions/: __init__.py  id_generation.py  maybe_await.py  security.py
(+119 files in other folders)
