[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portus"
version = "0.1.0"
description = "Hexagonal Service Framework (Python)"
authors = [
    { name = "Carlos Pérez Küper", email = "carlosperezkuper@email.com" }
]
dependencies = [
    "pydantic>=2.0"
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pip-tools",
]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "ruff",
    "black",
    "mypy"
]

[project.scripts]
# ejemplo: my-tool = "portus.cli:main"
