[build-system]
requires = ["setuptools>=61.0", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "portus"
version = "0.1.0"
description = "A hexagonal‑architecture service framework for Python"
readme = "README.md"
license-files = ["LICENSE.TXT", "AUTHORS.rst"]
authors = [
  { name="Carlos Pérez Küper", email="carlosperezkuper@email.com" }
]
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "black",
  "isort",
]

[project.urls]
"Homepage" = "https://github.com/charlyperezk/portus"
"Repository" = "https://github.com/charlyperezk/portus.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["example*", "tests*"]